[package]
name = "crontinel"
version = "0.1.0"
edition = "2021"
description = "Crontinel API client for Rust"
license = "MIT"
repository = "https://github.com/crontinel/crontinel"
keywords = ["crontinel", "cron", "monitoring", "laravel"]
categories = ["network", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[lib]
name = "crontinel"
path = "src/lib.rs"
